python-app/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app
  name: app
  namespace: python-app
spec:
  containers:
  - image: app:latest
    name: app
    resources: {}
    imagePullPolicy: Never
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
