python-app/app-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: python-app
spec:
  type: ClusterIP
  selector:
    run: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
