python-app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: python-app
spec:
  ingressClassName: nginx
  rules:
  - host: app.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apython-app-service
            port:
              number: 80
